--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --route: #3182ce;
     }
     body {
-      font-family: 'SF Pro', system-ui, -apple-system, sans-serif;
+      font-family: 'Product Sans', system-ui, -apple-system, sans-serif;
       background-color: #f7fafc;
       color: #2d3748;
       margin: 0;
